# trigger-visual-coding

./: CLAUDE.md  CUsersWorkDesktopfolderlocalaiaisrc-taurisrcnodeschat_server_node.rs  CUsersWorkDesktopfolderlocalaiaisrcnodesChatServerNode.tsx  README Node.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
src/: App.css  App.tsx  DropTargetManager.ts  NodeManager.ts  PluginManager.ts  Sidebar.css  Sidebar.tsx  ViewerContext.tsx  ViewerPage.tsx  WorkflowContext.tsx  WorkflowEngine.tsx  Workspace.css  Workspace.tsx  readme.txt  types.ts  viewerpage.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/simple-file-creator/: component.js  manifest.json
src-tauri/src/: lib.rs  main.rs  plugin_system.rs
src-tauri/src/nodes/: chat_web_server_node.rs  cli_ai_node.rs  cli_node.rs  file_creator_node.rs  file_path_node.rs  file_to_clipboard_node.rs  mod.rs  qr_code_node.rs  run_command_node.rs  start_node.rs  text_file_editor_node.rs  text_merger_node.rs  video_download_node.rs  workflow_storage.rs
src/nodes/: Basenode.tsx  ChatWebServerNode.tsx  CliAiNode.tsx  CliNode.tsx  FileCreatorNode.tsx  FilePathNode.tsx  FileToClipboardNode.tsx  PluginNode.tsx  QrCodeNode.tsx  StartNode.tsx  TextFileEditorNode.tsx  TextInputNode.tsx  TextMergerNode.tsx  VideoDownloadNode.js  VideoDownloadNode.tsx  basenode.css
store/: cliainode_10.json  cliainode_5.json  cliainode_6.json
